# parallel-programming-C

./: CMakeLists.txt  main.c
Linear_Eqiations_OpenMP/: CMakeLists.txt  First.c  Second.c  Second1.cpp  Second2.cpp  Usual.c  a.c  main.c
Matrix_parallel/: CMakeLists.txt  Matrix_multiplication.c
Solving_Linear_Equations/: CMakeLists.txt  main.c  main.cpp
Solving_Linear_Equations/include/: Matrix.h  Solving_Linear_Equations.h
Solving_Linear_Equations/result/: Parallel_first.cpp  Parallel_second.cpp  usual.cpp
Solving_Linear_Equations/src/: Matrix.cpp  Solving_Linear_Equations.cpp  Solving_Linear_Equations_parallel.cpp  Solving_Linear_Equations_parallel_first.cpp  Solving_Linear_Equations_parallel_second.cpp  Solving_Linear_Equations_usual.cpp  Solving_Linear_Equations_virtual.cpp
Solving_Linear_Equations/test/: CMakeLists.txt  Matrix.cpp  Matrix.h  Solving_Linear_Equations.h  Solving_Linear_Equations_parallel.cpp  Solving_Linear_Equations_parallel_first.cpp  Solving_Linear_Equations_parallel_second.cpp  Solving_Linear_Equations_usual.cpp  Solving_Linear_Equations_virtual.cpp  exe  execut.sh  main  main.80s-145,Pauk.btr  main.80s-2047,Pauk.btr  main.80s-2048,Pauk.btr  main.80s-2049,Pauk.btr  main.80s-2050,Pauk.btr  main.80s-573,Pauk.btr  main.80s-622,Pauk.btr  main.cpp
